--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <title>TKJ SMKN 1 Takisung - Explore the Future of Networking</title>
     <link rel="stylesheet" href="css/style.css">
     <link rel="stylesheet" href="css/responsif.css">
+    <link rel="stylesheet" href="css/miring.css">
     <link rel="icon" href="img/tkj.png">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <!-- <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.0.0/dist/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous"> -->
@@ -69,7 +70,8 @@
 </section>
 
 <footer>
-   <h1>©2025 - Joko Bimantaro</h1> 
+   <h1>©2025 - Joko Bimantaro</h1>
+   <p>build with HTML CSS and JavaScript</p> 
 </footer>
 
 <script src="js/js.js"></script>
