--- a/index.html
+++ b/index.html
@@ -50,11 +50,12 @@
     </section>
 
 <section id="isi-beranda">
+    <!-- tentang kami -->
     <div class="judul-isi">
         <h1>Tentang kami</h1>
     </div>
     <div class="judul-isi1">
-        <h2>Selamat datang di website resmi tkj smkn 1 takisung</h2>
+        <h2>─ Selamat datang di website resmi tkj smkn 1 takisung</h2>
     </div>
 
     <div class="konten">
@@ -67,7 +68,92 @@
             <p style="margin-top: 5px;">Selamat menjelajahi kenangan dan pengalaman kami!</p>
         </h2>
     </div>
+
 </section>
+
+<!-- perjalanan -->
+<div class="perjalanan">        
+    <div class="judul-perjalanan">
+        <h1">Sedikit kisah perjalanan  kami</h1>
+       </div>
+       
+<div class="isi-perjalanan">
+<details>
+   <summary>2021</summary>
+   <p>Tahun 2021 menjadi langkah pertama kami memasuki
+    SMKN 1 Takisung, namun bukan seperti yang kami bayangkan.
+    Pandemi Covid-19 masih menyelimuti dunia, dan kami pun harus
+    memulai perjalanan ini secara online. Interaksi dengan
+    teman-teman dan guru hanya terbatas melalui layar,
+    membuat kami sulit merasakan suasana sekolah yang sebenarnya.
+    Namun, sesekali kami diperbolehkan masuk untuk kelas khusus,
+    terutama Matematika dan Fisika. Momen-momen singkat itu menjadi
+    sangat berarti—kami akhirnya bisa bertemu langsung, meskipun 
+    terbatas dengan masker dan protokol kesehatan yang ketat.
+    Meski dunia terasa terisolasi, harapan kami untuk merasakan sekolah yang sesungguhnya tetap menyala.</p>
+ </details>
+ 
+ <details>
+   <summary>2022</summary>
+   <p>Tahun ini, semuanya mulai berubah. Tatap muka kembali 
+    dilakukan, meski dengan aturan ketat. Setiap pagi kami 
+    harus memakai masker, mencuci tangan, dan menjaga jarak 
+    sebelum masuk kelas. Sekolah terasa berbeda, tapi kami 
+    bersyukur bisa merasakan suasana belajar yang lebih nyata.
+    Pada awalnya, pembelajaran masih terbatas hanya sampai
+    tengah hari, tapi sedikit demi sedikit, semuanya mulai 
+    kembali seperti biasa. Setelah naik ke kelas 11, akhirnya 
+    kami bisa merasakan sekolah dengan lebih leluasa. Kami
+    mulai mengenal satu sama lain lebih dalam, bercanda, 
+    bekerja sama dalam tugas, dan di sinilah kenangan mulai tercipta.
+    
+    </p>
+ </details>
+
+ <details>
+   <summary>2023</summary>
+   <p>Kelas 11 semester 2 menjadi titik awal petualangan baru bagi
+    kami. Di sekolah kami, siswa kelas 11 akan menjalani program 
+    magang, dan masing-masing dari kami tersebar di berbagai tempat.
+    Kami keluar dari zona nyaman, menghadapi dunia kerja yang 
+    sesungguhnya, dan mengumpulkan banyak cerita berharga.
+    Ketika program magang berakhir, kami kembali ke sekolah dengan 
+    pengalaman yang tidak terlupakan. Kami membagikan kisah suka dan 
+    duka dalam presentasi magang sebelum akhirnya bersiap menghadapi ujian kenaikan kelas 12.
+    Setelah melewati ujian, kami resmi menjadi siswa kelas 12—tahun
+    terakhir kami di sekolah ini. Tapi berbeda dengan sebelumnya,
+    waktu belajar kami semakin berkurang. Kami mulai memanfaatkan
+    waktu yang tersisa untuk kebersamaan, bermain, bercanda, dan
+    menciptakan kenangan yang lebih dalam. Kami sadar, hari-hari
+    kami di sekolah ini mulai menipis, dan kami ingin menikmatinya sebaik mungkin.</p>
+ </details>
+
+ <details>
+   <summary>2024</summary>
+   <p>Tahun terakhir, babak penutup dari kisah yang tak ingin kami akhiri. 
+    Sebelum menghadapi ujian praktikum, kami sekelas berjalan-jalan bersama
+    guru-guru kami. Perjalanan dimulai dengan ziarah, momen yang penuh
+    harapan dan doa, lalu diakhiri dengan refreshing—tertawa bersama,
+    menikmati waktu yang semakin terasa cepat berlalu.
+    Tak lama setelah itu, kami mulai disibukkan dengan persiapan ujian.
+    Kami belajar bersama, saling membantu, dan akhirnya, saat itu pun 
+    tiba. Ujian Praktikum menjadi tantangan terakhir kami di sekolah ini.
+    Ada rasa tegang, ada rasa haru, tapi juga ada semangat untuk 
+    memberikan yang terbaik. Alhamdulillah, semuanya lulus!
+    Namun, satu momen terakhir masih menunggu—perpisahan sekolah. 
+    Sebelum acara utama, kami melakukan gladi selama 3 hari, menyempurnakan 
+    setiap detail untuk memastikan semuanya berjalan dengan baik.
+    Dan akhirnya, tanggal 7 Mei 2024 menjadi hari yang penuh makna. 
+    Hari di mana kami berdiri bersama, memakai toga, menerima penghargaan, 
+    dan mengucapkan salam perpisahan. Tangis haru bercampur tawa, karena 
+    kami tahu, setelah ini, jalan hidup akan membawa kami ke arah yang berbeda.
+    Mungkin ini akhir dari perjalanan kami di SMKN 1 Takisung, tapi bukan 
+    akhir dari persahabatan dan kenangan yang telah kami bangun di sini.
+    Sekolah ini, kelas ini, cerita ini—akan selalu menjadi bagian dari diri kami.</p>
+ </details>
+</div>
+
+       </div>
 
 <footer>
    <h1>©2025 - Joko Bimantaro</h1>
