--- a/index.html
+++ b/index.html
@@ -28,10 +28,10 @@
                </div>
                <ul>
                             <li><a href="#beranda" class="active">Beranda</a></li>
-                            <li><a href="#tentangkami">Alumni</a></li>
-                            <li><a href="#galeri">Galeri</a></li>  
-                            <li><a href="#sosmed">Momen</a></li>
-                            <li><a href="#kontak">Lainnya</a></li>
+                            <li><a href="alumni.html">Alumni</a></li>
+                            <li><a href="galeri.html">Galeri</a></li>  
+                            <li><a href="momen.html">Momen</a></li>
+                            <li><a href="lainnya.html">Lainnya</a></li>
                         </ul>
                     </nav>
                     <!-- Navbar selesai -->
@@ -74,12 +74,12 @@
 <!-- perjalanan -->
 <div class="perjalanan">        
     <div class="judul-perjalanan">
-        <h1">Sedikit kisah perjalanan  kami</h1>
+        <h1 style="color: white;">─ Sedikit kisah perjalanan  kami</h1>
        </div>
        
 <div class="isi-perjalanan">
 <details>
-   <summary>2021</summary>
+   <summary>2021: Awal dari Perjalanan</summary>
    <p>Tahun 2021 menjadi langkah pertama kami memasuki
     SMKN 1 Takisung, namun bukan seperti yang kami bayangkan.
     Pandemi Covid-19 masih menyelimuti dunia, dan kami pun harus
@@ -94,7 +94,7 @@
  </details>
  
  <details>
-   <summary>2022</summary>
+   <summary>2022: Kembali ke Normal</summary>
    <p>Tahun ini, semuanya mulai berubah. Tatap muka kembali 
     dilakukan, meski dengan aturan ketat. Setiap pagi kami 
     harus memakai masker, mencuci tangan, dan menjaga jarak 
@@ -111,7 +111,7 @@
  </details>
 
  <details>
-   <summary>2023</summary>
+   <summary>2023: Menjejak Dunia Nyata</summary>
    <p>Kelas 11 semester 2 menjadi titik awal petualangan baru bagi
     kami. Di sekolah kami, siswa kelas 11 akan menjalani program 
     magang, dan masing-masing dari kami tersebar di berbagai tempat.
@@ -129,7 +129,7 @@
  </details>
 
  <details>
-   <summary>2024</summary>
+   <summary>2024: Akhir dari Perjalanan</summary>
    <p>Tahun terakhir, babak penutup dari kisah yang tak ingin kami akhiri. 
     Sebelum menghadapi ujian praktikum, kami sekelas berjalan-jalan bersama
     guru-guru kami. Perjalanan dimulai dengan ziarah, momen yang penuh
