--- a/momen.html
+++ b/momen.html
@@ -46,7 +46,7 @@
     </section>
     <div class="konten-semua">
         <div class="judul-konten">
-            <h1>Galeri Kami</h1>
+            <h1>Beberapa momen kami</h1>
         </div>
     </div>
 </body>
