--- a/alumni.html
+++ b/alumni.html
@@ -46,7 +46,7 @@
     </section>
     <div class="konten-semua">
         <div class="judul-konten">
-            <h1>Daftar alumni SMKN1 Takisung</h1>
+            <h1>Daftar alumni SMKN1 Takisungc</h1>
         </div>
     </div>
     <script src="js/js.js"></script>
