--- a/lainnya.html
+++ b/lainnya.html
@@ -49,5 +49,6 @@
             <h1>Daftar alumni SMKN1 Takisung</h1>
         </div>
     </div>
+    <script src="js/js.js"></script>
 </body>
 </html>
