--- a/alumni.html
+++ b/alumni.html
@@ -46,8 +46,9 @@
     </section>
     <div class="konten-semua">
         <div class="judul-konten">
-            <h1>Daftar alumni SMKN1 Takisungc</h1>
+            <h1>Daftar alumni SMKN 1 Takisung</h1>
         </div>
+        
     </div>
     <script src="js/js.js"></script>
 </body>
