--- a/alumni.html
+++ b/alumni.html
@@ -49,6 +49,17 @@
             <h1>Daftar alumni SMKN 1 Takisung</h1>
         </div>
         
+        <div class="foto">
+            <!-- gambar 1 -->
+            <div class="galer">
+                <div class="galeri-img">
+                    <div class="kata">
+                        <p>Permana</p>
+                    </div>
+                    <img src="img/tkj.png" alt="">
+                </div>
+            </div>
+            <p style="justify-content: space-around;">nama</p>
     </div>
     <script src="js/js.js"></script>
 </body>
