--- a/alumni.html
+++ b/alumni.html
@@ -43,24 +43,72 @@
              </div>
          </div>
      </header>
-    </section>
-    <div class="konten-semua">
-        <div class="judul-konten">
-            <h1>Daftar alumni SMKN 1 Takisung</h1>
-        </div>
-        
-        <div class="foto">
-            <!-- gambar 1 -->
-            <div class="galer">
-                <div class="galeri-img">
-                    <div class="kata">
-                        <p>Permana</p>
-                    </div>
-                    <img src="img/tkj.png" alt="">
-                </div>
+     <div class="konten-semua">
+         <div class="judul-konten">
+             <h1>Daftar alumni TKJ SMKN 1 Takisung</h1>
+             <h2>2021 - 2024</h2>
             </div>
-            <p style="justify-content: space-around;">nama</p>
-    </div>
+            <div class="gambar">
+                <img src="img/fotbar.jpg" alt="fotbar">
+            </div>
+        </div>
+    <div class="nama">
+        <div class="nama-kiri">
+            <ul class="ul">
+                    <li class="li">Akhmad Dedi Muhaidi</li>
+                    <li class="li">Alwinda Patma</li>
+                    <li class="li">Annisa Anindia</li>
+                    <li class="li">Arif Hidayat</li>
+                    <li class="li">Aulia</li>
+                    <li class="li">Bagus Ahmad Abdillah</li>
+                    <li class="li">Chantika</li>
+                    <li class="li">Cornelia Rasya Maulina</li>
+                    <li class="li">Diva Aulianti</li>
+                    <li class="li">Gustina</li>
+                    <li class="li">Husaibah Effendi</li>
+                </ul>
+            </div>
+
+            <div class="nama-tengah">
+                <ul class="ul">
+                    <li class="li">Joko Bimantaro</li>
+                    <li class="li">Muhammad Anggie Revani</li>
+                    <li class="li">Muhammad Erfani</li>
+                    <li class="li">Muhammad Najihun</li>
+                    <li class="li">Muhammad Raeihan Nur Wahyudi</li>
+                    <li class="li">Muhammad Rifky Saputra</li>
+                    <li class="li">Muhammad Zaki</li>
+                    <li class="li">Nadriyan</li>
+                    <li class="li">Nor Ayda Sapitri</li>
+                    <li class="li">Nor Dahyanor</li>
+                </ul>
+            </div>
+
+            <div class="nama-kanan">
+                <ul class="ul">
+                    <li class="li">Nor Hikmah</li>
+                    <li class="li">Rahmawati</li>
+                    <li class="li">Reksanita Earli Hariyanto</li>
+                    <li class="li">Reza Taher</li>
+                    <li class="li">Selpi Ramadhani</li>
+                    <li class="li">Sri Mulya</li>
+                    <li class="li">Sri Purwatiningsih</li>
+                    <li class="li">Surya Lesmana</li>
+                    <li class="li">Widya Rosiana</li>
+                    <li class="li">Yudha Setiawan</li>
+                    <li class="li">Zaki Nuryanto</li>
+                </ul>
+            </div>
+        </div>
+        <div class="wali">
+            <h3>Wali kelas</h3>
+            <p>Muhammad Danu Tri Nugroho YS S.Kom</p>
+        </div>
+    </section>
+    <footer>
+        <h1>©2025 - Joko Bimantaro</h1>
+        <p>build with HTML CSS and JavaScript</p> 
+     </footer>
     <script src="js/js.js"></script>
 </body>
 </html>
