--- a/kontak.html
+++ b/kontak.html
@@ -14,7 +14,7 @@
     <link href="https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&family=Roboto:ital,wght@0,100..900;1,100..900&display=swap" rel="stylesheet">
 </head>
 <body>
-    <section id="alumni">
+    <section id="kontak">
     <header>
         <div class="main-container">
     <!-- Navbar -->
@@ -31,7 +31,7 @@
                          <li><a href="alumni.html">Alumni</a></li>
                          <li><a href="galeri.html">Galeri</a></li>  
                          <li><a href="momen.html">Momen</a></li>
-                         <li><a href="lainnya.html">Lainnya</a></li>
+                         <li><a href="kontak.html">Kontak</a></li>
                      </ul>
                  </nav>
                  <!-- Navbar selesai -->
@@ -49,6 +49,30 @@
             <h1>Daftar alumni SMKN1 Takisung</h1>
         </div>
     </div>
+      <!-- Kontak -->
+      <section id="kontak">
+        <h4 class="pre-title pre-kontak">Kontak kami</h4>
+        <h1 class="section-title title-kontak" >Bisa tinggalkan pesan</h1>
+        <div class="kontak main-container">
+            <div class="kontak-left">
+                <form class="kontak-form" action="https://formspree.io/f/xqapaply" method="POST">
+                    <div>
+                        <input type="text" placeholder="Nama" name="name">
+                    </div>
+                    <div>
+                        <input type="email" placeholder="Email" name="email">
+                    </div>
+                    <div>
+                        <textarea name="messege" placeholder="Pesan" cols="30" rows="10"></textarea>
+                    </div>
+                    <div><button class="btn-submit">Kirim Pesan</button></div>
+                </form>
+            </div>
+                </div>
+            </div>
+        </div>
+       </section>
+        <!-- Kontak selesai -->
     <script src="js/js.js"></script>
 </body>
 </html>
