--- a/momen.html
+++ b/momen.html
@@ -31,7 +31,7 @@
                          <li><a href="alumni.html">Alumni</a></li>
                          <li><a href="galeri.html">Galeri</a></li>  
                          <li><a href="momen.html">Momen</a></li>
-                         <li><a href="lainnya.html">Lainnya</a></li>
+                         <li><a href="kontak.html">Kontak</a></li>
                      </ul>
                  </nav>
                  <!-- Navbar selesai -->
